# goit-pythonweb-hw

goit-pythonweb-hw-01/: task-1.py  task-2.py
goit-pythonweb-hw-02/: Dockerfile  docker-compose.yaml
goit-pythonweb-hw-03/: .dockerignore  Dockerfile  error.html  index.html  main.py  message.html
goit-pythonweb-hw-03/storage/: data.json
goit-pythonweb-hw-03/templates/: read.html
goit-pythonweb-hw-04/: README.md  main.py
goit-pythonweb-hw-04/test_source/: Makefile
goit-pythonweb-hw-04/test_source/code/: index.html
goit-pythonweb-hw-04/test_source/data/: config.json
goit-pythonweb-hw-04/test_source/data/exports/: MANIFEST  orders.csv  settings.json
goit-pythonweb-hw-04/test_source/documents/: notes.txt  readme.md  report.md
goit-pythonweb-hw-04/test_source/subdir/: utils.py
goit-pythonweb-hw-06/: .env.example  .gitignore  README.md  main.py  my_select.py  pyproject.toml  seed.py
goit-pythonweb-hw-06/conf/: config.py
goit-pythonweb-hw-06/migrations/: env.py
goit-pythonweb-hw-06/migrations/versions/: 64644b7a9885_initial_schema.py
goit-pythonweb-hw-06/src/: db.py  models.py
goit-pythonweb-hw-08/: .env.example  .gitignore  alembic.ini  docker-compose.yml  main.py  pyproject.toml
goit-pythonweb-hw-08/app/: crud.py  database.py  models.py  schemas.py
goit-pythonweb-hw-08/app/api/routes/: __init__.py  contacts.py
goit-pythonweb-hw-08/migrations/: env.py
goit-pythonweb-hw-08/migrations/versions/: 1b70b927cd9a_init_contacts_table.py
